feat: [CDS-56505]: Config Files from BitBucket (#46974)